--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 </html>
